[gd_scene load_steps=7 format=3 uid="uid://s1w7s3ht0bk3"]

[ext_resource type="Script" path="res://scripts/main-menu/main-menu.gd" id="1_bklqo"]
[ext_resource type="Texture2D" uid="uid://28jevpv1bgu7" path="res://assets/main-menu/main-menu-background.png" id="2_j32f5"]
[ext_resource type="Theme" uid="uid://bi0ijr5h3wj85" path="res://themes/main menu/buttons2.tres" id="3_dsihq"]
[ext_resource type="FontFile" uid="uid://dpmqjjsa2yvll" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="4_2r38b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_42n5x"]
bg_color = Color(0, 0.0156863, 0.0941176, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oscmy"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bklqo")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_j32f5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 200
alignment = 1

[node name="Game Titile" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_dsihq")
theme_override_font_sizes/font_size = 64
text = "AstroBro"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 80
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.0235294, 0.0235294, 0.0235294, 1)
theme_override_fonts/font = ExtResource("4_2r38b")
theme_override_font_sizes/font_size = 45
theme_override_styles/hover = SubResource("StyleBoxFlat_42n5x")
theme_override_styles/normal = SubResource("StyleBoxFlat_oscmy")
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2r38b")
theme_override_font_sizes/font_size = 45
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2r38b")
theme_override_font_sizes/font_size = 45
text = "Exit"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
